Closed Bug 1683593 Opened 3 years ago Closed 3 years ago

When accessing ipv6 page address, document.cookie is empty in firefox 84.0

Categories

(Core :: DOM: Networking, defect, P2)

Firefox 84
defect

Tracking

()

RESOLVED FIXED
87 Branch
Tracking Status
firefox-esr78 --- unaffected
firefox84 --- wontfix
firefox85 --- wontfix
firefox86 --- wontfix
firefox87 --- fixed

People

(Reporter: ljx666123, Assigned: kershaw)

References

(Regression)

Details

(Keywords: regression, Whiteboard: [necko-triaged])

Attachments

(1 file)

User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/87.0.4280.88 Safari/537.36

Steps to reproduce:

用firefox 84.0新版本访问ipv6页面地址,document.cookie获取为空, 查看浏览器下存在cookie, 修改添加删除cookie也不会同步, 需要清除缓刷新才可以.
新版本访问ipv4地址没有问题. 老版本火狐ipv4 ipv6都没有问题. 求大神指导!!!

Actual results:

用firefox 84.0新版本访问ipv6页面地址,document.cookie获取为空

Expected results:

用firefox 84.0新版本访问ipv6地址,document.cookie可以正常获取

Bugbug thinks this bug should belong to this component, but please revert this change in case of error.

Component: Untriaged → DOM: Core & HTML
Product: Firefox → Core
Summary: 用firefox 84.0新版本访问ipv6地址,document.cookie获取为空, 查看浏览器下存在cookie, 修改添加删除cookie也不会同步, 需要清除缓刷新才可以. 新版本访问ipv4地址没有问题. 老版本火狐ipv4 ipv6都没有问题. 求大神指导!!! → When accessing ipv6 page address, document.cookie is empty in firefox 84.0
Component: DOM: Core & HTML → DOM: Networking

Hi Reporter,

I'd like to ask for more information. What web site do you use to reproduce this problem?
Could you try to use mozregression to find out the regression range?

If you feel not comfortable with replying comments in English, feel free to send the information to my email (kershaw at mozilla dot com) in Chinese. I can help to translate.

Thanks.

Flags: needinfo?(ljx666123)

Reporter said they found this from the internal network of their company.

QA Whiteboard: [qa-regression-triage]
Has Regression Range: --- → yes

https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=d18224bb657a4b1463485f3c38bc930bdf20050e&tochange=7905e3c244502295786209e70ff143b6a4f1dd9a

Locally I was testing using ipv4 vs ipv6 server
(python -m http.server 8000 --bind 127.0.0.1
vs
https://gist.github.com/chrisklaiber/54511886e8e4c18126792fc634f44d57)
and then
document.cookie = "foo=bar"; document.cookie;
in the browser console.

(In reply to Olli Pettay [:smaug] from comment #4)

https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=d18224bb657a4b1463485f3c38bc930bdf20050e&tochange=7905e3c244502295786209e70ff143b6a4f1dd9a

Locally I was testing using ipv4 vs ipv6 server
(python -m http.server 8000 --bind 127.0.0.1
vs
https://gist.github.com/chrisklaiber/54511886e8e4c18126792fc634f44d57)
and then
document.cookie = "foo=bar"; document.cookie;
in the browser console.

Thanks for doing this.

Flags: needinfo?(ljx666123)

document.cookie is empty on [::1] but also any other ipv6 addresses I could try.
Setting a cookie via document.cookie does work, and the inspector storage tab shows all cookies correctly.

Note that sometimes inspector storage tab also fails to show cookies until I close and re-open the inspector.

Status: UNCONFIRMED → NEW
Ever confirmed: true

Jens, could you perhaps find someone to take a look at this regression?

Flags: needinfo?(jstutte)
Flags: needinfo?(jstutte) → needinfo?(kershaw)
Assignee: nobody → kershaw
Severity: -- → S3
Flags: needinfo?(kershaw)
Priority: -- → P2
Whiteboard: [necko-triaged]
Pushed by kjang@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/52e904eba871
Use bracketed IPv6 address to get cookies r=baku
Status: NEW → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 87 Branch

The patch landed in nightly and beta is affected.
:kershaw, is this bug important enough to require an uplift?
If not please set status_beta to wontfix.

For more information, please visit auto_nag documentation.

Flags: needinfo?(kershaw)

I think we don't need to uplift this.

Flags: needinfo?(kershaw)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: