Bug 1683593 - Use bracketed IPv6 address to get cookies r=baku

Differential Revision: https://phabricator.services.mozilla.com/D102208